k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app
spec:
  ingressClassName: traefik
  rules:
  - host: "python-app.example.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-app
            port:
              number: 8080
  # tls:
  # - hosts:
  #   - python-app.example.com
  #   secretName: python-app-tls
